library/src/cbor/libqcborvalue.h

typedef struct QCborArray QCborArray;
typedef struct QCborMap QCborMap;
typedef struct QCborStreamWriter QCborStreamWriter;
typedef struct QCborValue QCborValue;
typedef struct QCborValueRef QCborValueRef;
typedef struct QDateTime QDateTime;
typedef struct QJsonValue QJsonValue;
typedef struct QRegularExpression QRegularExpression;
typedef struct QUrl QUrl;
typedef struct QUuid QUuid;
typedef struct QVariant QVariant;
QCborValueRef* QCborValueRef_new(QCborValueRef* other);
QCborValueRef* QCborValueRef_new2(QCborValueRef* other);
QCborValueRef* QCborValueRef_new3(QCborValueRef* param1);
void QCborValueRef_OperatorAssign(QCborValueRef* self, QCborValue* other);
void QCborValueRef_OperatorAssignWithOther(QCborValueRef* self, QCborValueRef* other);
QCborValueRef* QCborValueRef_OperatorSubscript(QCborValueRef* self, long long key);
QCborValueRef* QCborValueRef_OperatorSubscript2(QCborValueRef* self, libqt_string key);
QCborValue* QCborValueRef_ToQCborValue(const QCborValueRef* self);
int QCborValueRef_Type(const QCborValueRef* self);
bool QCborValueRef_IsInteger(const QCborValueRef* self);
bool QCborValueRef_IsByteArray(const QCborValueRef* self);
bool QCborValueRef_IsString(const QCborValueRef* self);
bool QCborValueRef_IsArray(const QCborValueRef* self);
bool QCborValueRef_IsMap(const QCborValueRef* self);
bool QCborValueRef_IsTag(const QCborValueRef* self);
bool QCborValueRef_IsFalse(const QCborValueRef* self);
bool QCborValueRef_IsTrue(const QCborValueRef* self);
bool QCborValueRef_IsBool(const QCborValueRef* self);
bool QCborValueRef_IsNull(const QCborValueRef* self);
bool QCborValueRef_IsUndefined(const QCborValueRef* self);
bool QCborValueRef_IsDouble(const QCborValueRef* self);
bool QCborValueRef_IsDateTime(const QCborValueRef* self);
bool QCborValueRef_IsUrl(const QCborValueRef* self);
bool QCborValueRef_IsRegularExpression(const QCborValueRef* self);
bool QCborValueRef_IsUuid(const QCborValueRef* self);
bool QCborValueRef_IsInvalid(const QCborValueRef* self);
bool QCborValueRef_IsContainer(const QCborValueRef* self);
bool QCborValueRef_IsSimpleType(const QCborValueRef* self);
bool QCborValueRef_IsSimpleTypeWithSt(const QCborValueRef* self, uint8_t st);
uint8_t QCborValueRef_ToSimpleType(const QCborValueRef* self);
uint64_t QCborValueRef_Tag(const QCborValueRef* self);
QCborValue* QCborValueRef_TaggedValue(const QCborValueRef* self);
long long QCborValueRef_ToInteger(const QCborValueRef* self);
bool QCborValueRef_ToBool(const QCborValueRef* self);
double QCborValueRef_ToDouble(const QCborValueRef* self);
libqt_string QCborValueRef_ToByteArray(const QCborValueRef* self);
libqt_string QCborValueRef_ToString(const QCborValueRef* self);
QDateTime* QCborValueRef_ToDateTime(const QCborValueRef* self);
QUrl* QCborValueRef_ToUrl(const QCborValueRef* self);
QRegularExpression* QCborValueRef_ToRegularExpression(const QCborValueRef* self);
QUuid* QCborValueRef_ToUuid(const QCborValueRef* self);
QCborArray* QCborValueRef_ToArray(const QCborValueRef* self);
QCborArray* QCborValueRef_ToArrayWithQCborArray(const QCborValueRef* self, QCborArray* a);
QCborMap* QCborValueRef_ToMap(const QCborValueRef* self);
QCborMap* QCborValueRef_ToMapWithQCborMap(const QCborValueRef* self, QCborMap* m);
QCborValue* QCborValueRef_OperatorSubscript3(const QCborValueRef* self, libqt_string key);
QCborValue* QCborValueRef_OperatorSubscript5(const QCborValueRef* self, long long key);
int QCborValueRef_Compare(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_OperatorEqual(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_OperatorNotEqual(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_OperatorLesser(const QCborValueRef* self, QCborValue* other);
QVariant* QCborValueRef_ToVariant(const QCborValueRef* self);
QJsonValue* QCborValueRef_ToJsonValue(const QCborValueRef* self);
libqt_string QCborValueRef_ToCbor(QCborValueRef* self);
void QCborValueRef_ToCborWithWriter(QCborValueRef* self, QCborStreamWriter* writer);
libqt_string QCborValueRef_ToDiagnosticNotation(QCborValueRef* self);
uint8_t QCborValueRef_ToSimpleType1(const QCborValueRef* self, uint8_t defaultValue);
uint64_t QCborValueRef_Tag1(const QCborValueRef* self, uint64_t defaultValue);
QCborValue* QCborValueRef_TaggedValue1(const QCborValueRef* self, QCborValue* defaultValue);
long long QCborValueRef_ToInteger1(const QCborValueRef* self, long long defaultValue);
bool QCborValueRef_ToBool1(const QCborValueRef* self, bool defaultValue);
double QCborValueRef_ToDouble1(const QCborValueRef* self, double defaultValue);
libqt_string QCborValueRef_ToByteArray1(const QCborValueRef* self, libqt_string defaultValue);
libqt_string QCborValueRef_ToString1(const QCborValueRef* self, libqt_string defaultValue);
QDateTime* QCborValueRef_ToDateTime1(const QCborValueRef* self, QDateTime* defaultValue);
QUrl* QCborValueRef_ToUrl1(const QCborValueRef* self, QUrl* defaultValue);
QRegularExpression* QCborValueRef_ToRegularExpression1(const QCborValueRef* self, QRegularExpression* defaultValue);
QUuid* QCborValueRef_ToUuid1(const QCborValueRef* self, QUuid* defaultValue);
libqt_string QCborValueRef_ToCbor1(QCborValueRef* self, int opt);
void QCborValueRef_ToCbor2(QCborValueRef* self, QCborStreamWriter* writer, int opt);
libqt_string QCborValueRef_ToDiagnosticNotation1(QCborValueRef* self, int opt);