src/cbor/libqcborvalue.bf

public struct QCborValueRef
{
	[LinkName("QCborValueRef_new")]
	public static extern void* QCborValueRef_new(QCborValueRef other);
	[LinkName("QCborValueRef_new2")]
	public static extern void* QCborValueRef_new2(QCborValueRef other);
	[LinkName("QCborValueRef_new3")]
	public static extern void* QCborValueRef_new3(QCborValueRef param1);
	[LinkName("QCborValueRef_OperatorAssign")]
	public static extern void QCborValueRef_OperatorAssign(void* c_this, QCborValue other);
	[LinkName("QCborValueRef_OperatorAssignWithOther")]
	public static extern void QCborValueRef_OperatorAssignWithOther(void* c_this, QCborValueRef other);
	[LinkName("QCborValueRef_OperatorSubscript")]
	public static extern QCborValueRef QCborValueRef_OperatorSubscript(void* c_this, int64 key);
	[LinkName("QCborValueRef_OperatorSubscript2")]
	public static extern QCborValueRef QCborValueRef_OperatorSubscript2(void* c_this, char8[] key);
	[LinkName("QCborValueRef_ToQCborValue")]
	public static extern QCborValue QCborValueRef_ToQCborValue(void* c_this);
	[LinkName("QCborValueRef_Type")]
	public static extern int64 QCborValueRef_Type(void* c_this);
	[LinkName("QCborValueRef_IsInteger")]
	public static extern bool QCborValueRef_IsInteger(void* c_this);
	[LinkName("QCborValueRef_IsByteArray")]
	public static extern bool QCborValueRef_IsByteArray(void* c_this);
	[LinkName("QCborValueRef_IsString")]
	public static extern bool QCborValueRef_IsString(void* c_this);
	[LinkName("QCborValueRef_IsArray")]
	public static extern bool QCborValueRef_IsArray(void* c_this);
	[LinkName("QCborValueRef_IsMap")]
	public static extern bool QCborValueRef_IsMap(void* c_this);
	[LinkName("QCborValueRef_IsTag")]
	public static extern bool QCborValueRef_IsTag(void* c_this);
	[LinkName("QCborValueRef_IsFalse")]
	public static extern bool QCborValueRef_IsFalse(void* c_this);
	[LinkName("QCborValueRef_IsTrue")]
	public static extern bool QCborValueRef_IsTrue(void* c_this);
	[LinkName("QCborValueRef_IsBool")]
	public static extern bool QCborValueRef_IsBool(void* c_this);
	[LinkName("QCborValueRef_IsNull")]
	public static extern bool QCborValueRef_IsNull(void* c_this);
	[LinkName("QCborValueRef_IsUndefined")]
	public static extern bool QCborValueRef_IsUndefined(void* c_this);
	[LinkName("QCborValueRef_IsDouble")]
	public static extern bool QCborValueRef_IsDouble(void* c_this);
	[LinkName("QCborValueRef_IsDateTime")]
	public static extern bool QCborValueRef_IsDateTime(void* c_this);
	[LinkName("QCborValueRef_IsUrl")]
	public static extern bool QCborValueRef_IsUrl(void* c_this);
	[LinkName("QCborValueRef_IsRegularExpression")]
	public static extern bool QCborValueRef_IsRegularExpression(void* c_this);
	[LinkName("QCborValueRef_IsUuid")]
	public static extern bool QCborValueRef_IsUuid(void* c_this);
	[LinkName("QCborValueRef_IsInvalid")]
	public static extern bool QCborValueRef_IsInvalid(void* c_this);
	[LinkName("QCborValueRef_IsContainer")]
	public static extern bool QCborValueRef_IsContainer(void* c_this);
	[LinkName("QCborValueRef_IsSimpleType")]
	public static extern bool QCborValueRef_IsSimpleType(void* c_this);
	[LinkName("QCborValueRef_IsSimpleTypeWithSt")]
	public static extern bool QCborValueRef_IsSimpleTypeWithSt(void* c_this, void st);
	[LinkName("QCborValueRef_ToSimpleType")]
	public static extern void QCborValueRef_ToSimpleType(void* c_this);
	[LinkName("QCborValueRef_Tag")]
	public static extern void QCborValueRef_Tag(void* c_this);
	[LinkName("QCborValueRef_TaggedValue")]
	public static extern QCborValue QCborValueRef_TaggedValue(void* c_this);
	[LinkName("QCborValueRef_ToInteger")]
	public static extern int64 QCborValueRef_ToInteger(void* c_this);
	[LinkName("QCborValueRef_ToBool")]
	public static extern bool QCborValueRef_ToBool(void* c_this);
	[LinkName("QCborValueRef_ToDouble")]
	public static extern double QCborValueRef_ToDouble(void* c_this);
	[LinkName("QCborValueRef_ToByteArray")]
	public static extern uint8[] QCborValueRef_ToByteArray(void* c_this);
	[LinkName("QCborValueRef_ToString")]
	public static extern char8[] QCborValueRef_ToString(void* c_this);
	[LinkName("QCborValueRef_ToDateTime")]
	public static extern QDateTime QCborValueRef_ToDateTime(void* c_this);
	[LinkName("QCborValueRef_ToUrl")]
	public static extern QUrl QCborValueRef_ToUrl(void* c_this);
	[LinkName("QCborValueRef_ToRegularExpression")]
	public static extern QRegularExpression QCborValueRef_ToRegularExpression(void* c_this);
	[LinkName("QCborValueRef_ToUuid")]
	public static extern QUuid QCborValueRef_ToUuid(void* c_this);
	[LinkName("QCborValueRef_ToArray")]
	public static extern QCborArray QCborValueRef_ToArray(void* c_this);
	[LinkName("QCborValueRef_ToArrayWithQCborArray")]
	public static extern QCborArray QCborValueRef_ToArrayWithQCborArray(void* c_this, QCborArray a);
	[LinkName("QCborValueRef_ToMap")]
	public static extern QCborMap QCborValueRef_ToMap(void* c_this);
	[LinkName("QCborValueRef_ToMapWithQCborMap")]
	public static extern QCborMap QCborValueRef_ToMapWithQCborMap(void* c_this, QCborMap m);
	[LinkName("QCborValueRef_OperatorSubscript3")]
	public static extern QCborValue QCborValueRef_OperatorSubscript3(void* c_this, char8[] key);
	[LinkName("QCborValueRef_OperatorSubscript5")]
	public static extern QCborValue QCborValueRef_OperatorSubscript5(void* c_this, int64 key);
	[LinkName("QCborValueRef_Compare")]
	public static extern int32 QCborValueRef_Compare(void* c_this, QCborValue other);
	[LinkName("QCborValueRef_OperatorEqual")]
	public static extern bool QCborValueRef_OperatorEqual(void* c_this, QCborValue other);
	[LinkName("QCborValueRef_OperatorNotEqual")]
	public static extern bool QCborValueRef_OperatorNotEqual(void* c_this, QCborValue other);
	[LinkName("QCborValueRef_OperatorLesser")]
	public static extern bool QCborValueRef_OperatorLesser(void* c_this, QCborValue other);
	[LinkName("QCborValueRef_ToVariant")]
	public static extern QVariant QCborValueRef_ToVariant(void* c_this);
	[LinkName("QCborValueRef_ToJsonValue")]
	public static extern QJsonValue QCborValueRef_ToJsonValue(void* c_this);
	[LinkName("QCborValueRef_ToCbor")]
	public static extern uint8[] QCborValueRef_ToCbor(void* c_this);
	[LinkName("QCborValueRef_ToCborWithWriter")]
	public static extern void QCborValueRef_ToCborWithWriter(void* c_this, QCborStreamWriter writer);
	[LinkName("QCborValueRef_ToDiagnosticNotation")]
	public static extern char8[] QCborValueRef_ToDiagnosticNotation(void* c_this);
	[LinkName("QCborValueRef_ToSimpleType1")]
	public static extern void QCborValueRef_ToSimpleType1(void* c_this, void defaultValue);
	[LinkName("QCborValueRef_Tag1")]
	public static extern void QCborValueRef_Tag1(void* c_this, void defaultValue);
	[LinkName("QCborValueRef_TaggedValue1")]
	public static extern QCborValue QCborValueRef_TaggedValue1(void* c_this, QCborValue defaultValue);
	[LinkName("QCborValueRef_ToInteger1")]
	public static extern int64 QCborValueRef_ToInteger1(void* c_this, int64 defaultValue);
	[LinkName("QCborValueRef_ToBool1")]
	public static extern bool QCborValueRef_ToBool1(void* c_this, bool defaultValue);
	[LinkName("QCborValueRef_ToDouble1")]
	public static extern double QCborValueRef_ToDouble1(void* c_this, double defaultValue);
	[LinkName("QCborValueRef_ToByteArray1")]
	public static extern uint8[] QCborValueRef_ToByteArray1(void* c_this, uint8[] defaultValue);
	[LinkName("QCborValueRef_ToString1")]
	public static extern char8[] QCborValueRef_ToString1(void* c_this, char8[] defaultValue);
	[LinkName("QCborValueRef_ToDateTime1")]
	public static extern QDateTime QCborValueRef_ToDateTime1(void* c_this, QDateTime defaultValue);
	[LinkName("QCborValueRef_ToUrl1")]
	public static extern QUrl QCborValueRef_ToUrl1(void* c_this, QUrl defaultValue);
	[LinkName("QCborValueRef_ToRegularExpression1")]
	public static extern QRegularExpression QCborValueRef_ToRegularExpression1(void* c_this, QRegularExpression defaultValue);
	[LinkName("QCborValueRef_ToUuid1")]
	public static extern QUuid QCborValueRef_ToUuid1(void* c_this, QUuid defaultValue);
	[LinkName("QCborValueRef_ToCbor1")]
	public static extern uint8[] QCborValueRef_ToCbor1(void* c_this, int64 opt);
	[LinkName("QCborValueRef_ToCbor2")]
	public static extern void QCborValueRef_ToCbor2(void* c_this, QCborStreamWriter writer, int64 opt);
	[LinkName("QCborValueRef_ToDiagnosticNotation1")]
	public static extern char8[] QCborValueRef_ToDiagnosticNotation1(void* c_this, int64 opt);
}